Remove reference to AgentSessionRequest
