# rust/src/models.rs
@@ -397,133 +397,6 @@ impl std::ops::DerefMut for AgentApiKey {
 
 #[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
 #[cfg_attr(feature = "conversion", derive(frunk::LabelledGeneric))]
-pub struct AgentSessionRequest {
-    #[serde(rename = "sessionId")]
-    pub session_id: String,
-
-    /// Optional indicator that tells the server that this is a new session.
-    #[serde(rename = "isNew")]
-    #[serde(skip_serializing_if="Option::is_none")]
-    pub is_new: Option<bool>,
-
-}
-
-impl AgentSessionRequest {
-    pub fn new(session_id: String, ) -> AgentSessionRequest {
-        AgentSessionRequest {
-            session_id: session_id,
-            is_new: None,
-        }
-    }
-}
-
-/// Converts the AgentSessionRequest value to the Query Parameters representation (style=form, explode=false)
-/// specified in https://swagger.io/docs/specification/serialization/
-/// Should be implemented in a serde serializer
-impl std::string::ToString for AgentSessionRequest {
-    fn to_string(&self) -> String {
-        let mut params: Vec<String> = vec![];
-
-        params.push("sessionId".to_string());
-        params.push(self.session_id.to_string());
-
-
-        if let Some(ref is_new) = self.is_new {
-            params.push("isNew".to_string());
-            params.push(is_new.to_string());
-        }
-
-        params.join(",").to_string()
-    }
-}
-
-/// Converts Query Parameters representation (style=form, explode=false) to a AgentSessionRequest value
-/// as specified in https://swagger.io/docs/specification/serialization/
-/// Should be implemented in a serde deserializer
-impl std::str::FromStr for AgentSessionRequest {
-    type Err = String;
-
-    fn from_str(s: &str) -> std::result::Result<Self, Self::Err> {
-        #[derive(Default)]
-        // An intermediate representation of the struct to use for parsing.
-        struct IntermediateRep {
-            pub session_id: Vec<String>,
-            pub is_new: Vec<bool>,
-        }
-
-        let mut intermediate_rep = IntermediateRep::default();
-
-        // Parse into intermediate representation
-        let mut string_iter = s.split(',').into_iter();
-        let mut key_result = string_iter.next();
-
-        while key_result.is_some() {
-            let val = match string_iter.next() {
-                Some(x) => x,
-                None => return std::result::Result::Err("Missing value while parsing AgentSessionRequest".to_string())
-            };
-
-            if let Some(key) = key_result {
-                match key {
-                    "sessionId" => intermediate_rep.session_id.push(<String as std::str::FromStr>::from_str(val).map_err(|x| format!("{}", x))?),
-                    "isNew" => intermediate_rep.is_new.push(<bool as std::str::FromStr>::from_str(val).map_err(|x| format!("{}", x))?),
-                    _ => return std::result::Result::Err("Unexpected key while parsing AgentSessionRequest".to_string())
-                }
-            }
-
-            // Get the next key
-            key_result = string_iter.next();
-        }
-
-        // Use the intermediate representation to return the struct
-        std::result::Result::Ok(AgentSessionRequest {
-            session_id: intermediate_rep.session_id.into_iter().next().ok_or("sessionId missing in AgentSessionRequest".to_string())?,
-            is_new: intermediate_rep.is_new.into_iter().next(),
-        })
-    }
-}
-
-// Methods for converting between header::IntoHeaderValue<AgentSessionRequest> and hyper::header::HeaderValue
-
-#[cfg(any(feature = "client", feature = "server"))]
-impl std::convert::TryFrom<header::IntoHeaderValue<AgentSessionRequest>> for hyper::header::HeaderValue {
-    type Error = String;
-
-    fn try_from(hdr_value: header::IntoHeaderValue<AgentSessionRequest>) -> std::result::Result<Self, Self::Error> {
-        let hdr_value = hdr_value.to_string();
-        match hyper::header::HeaderValue::from_str(&hdr_value) {
-             std::result::Result::Ok(value) => std::result::Result::Ok(value),
-             std::result::Result::Err(e) => std::result::Result::Err(
-                 format!("Invalid header value for AgentSessionRequest - value: {} is invalid {}",
-                     hdr_value, e))
-        }
-    }
-}
-
-#[cfg(any(feature = "client", feature = "server"))]
-impl std::convert::TryFrom<hyper::header::HeaderValue> for header::IntoHeaderValue<AgentSessionRequest> {
-    type Error = String;
-
-    fn try_from(hdr_value: hyper::header::HeaderValue) -> std::result::Result<Self, Self::Error> {
-        match hdr_value.to_str() {
-             std::result::Result::Ok(value) => {
-                    match <AgentSessionRequest as std::str::FromStr>::from_str(value) {
-                        std::result::Result::Ok(value) => std::result::Result::Ok(header::IntoHeaderValue(value)),
-                        std::result::Result::Err(err) => std::result::Result::Err(
-                            format!("Unable to convert header value '{}' into AgentSessionRequest - {}",
-                                value, err))
-                    }
-             },
-             std::result::Result::Err(e) => std::result::Result::Err(
-                 format!("Unable to convert header: {:?} to string: {}",
-                     hdr_value, e))
-        }
-    }
-}
-
-
-#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
-#[cfg_attr(feature = "conversion", derive(frunk::LabelledGeneric))]
 pub struct Alert {
     // Note: inline enums are not fully supported by openapi-generator
     #[serde(rename = "type")]
